crates/macro/tests/html-list-fail.stderr
error: this open tag has no corresponding close tag
 --> $DIR/html-list-fail.rs:4:13
  |
4 |     html! { <> };
  |             ^^

error: this close tag has no corresponding open tag
 --> $DIR/html-list-fail.rs:5:13
  |
5 |     html! { </> };
  |             ^^^

error: this open tag has no corresponding close tag
 --> $DIR/html-list-fail.rs:6:13
  |
6 |     html! { <><> };
  |             ^^

error: this close tag has no corresponding open tag
 --> $DIR/html-list-fail.rs:7:13
  |
7 |     html! { </></> };
  |             ^^^

error: this open tag has no corresponding close tag
 --> $DIR/html-list-fail.rs:8:13
  |
8 |     html! { <><></> };
  |             ^^

error: only one root html element allowed
 --> $DIR/html-list-fail.rs:9:18
  |
9 |     html! { <></><></> };
  |                  ^^^^^

error: expected valid html element
  --> $DIR/html-list-fail.rs:10:15
   |
10 |     html! { <>invalid</> };
   |               ^^^^^^^
